# example-kafka-worker-py

./: .gitignore  README.md  config.py  pyproject.toml
record_deletor/: config.py  delete.py
record_processor/: config.py  processor.py
record_producer/: config.py  produce.py
redpanda/: docker-compose.yml
resonate_redpanda/: __init__.py  config.py  consume.py  produce.py  run.py  setup.py
setup/: config.py  setup_topics.py
