[project]
name = "resonate-redpanda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "kafka-python>=2.0.4",
    "resonate-sdk>=0.4.12",
]

[project.scripts]
resonate-redpanda = "resonate_redpanda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright[nodejs]>=1.1.394", "ruff>=0.9.7"]
